fixed overflow bug

--- a/public/reset.css
+++ b/public/reset.css
@@ -3,4 +3,5 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
